@@ -1,3 +1,7 @@
+2011-01-17 Borut Razem <borut.razem AT siol.net>
+
+	* Merged from trunk
+
 2011-01-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCicode.h,
@@ -68,6 +72,10 @@
 	  src/z80/tree_dec.hh,
 	  src/z80/ralloc2.cc:
 	  Initial import of the new register allocator.
+
+2011-01-16 Borut Razem <borut.razem AT siol.net>
+
+	* Created Optimal Register allocator (optralloc) branch
 
 2011-01-16 Philipp Klaus Krause <pkk AT spth.de>
 
